1. Autobiography tips converted to bulletpoints for less stress to players. 2. New autobiography tips added.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -51,14 +51,18 @@
 
 \subsection{История и биография}
 Добре описана история на персонажа помага както на играча да се вживее, така и на разказвача да следи целите на групата.
-В случай, че не ти стигат идеите, пробвай да отговориш на следните въпроси.                       \\
-1) Какво искаш от утрешния ден, от идните години, от живота?                                      \\
-2) Какво най-много цениш в хората?                                                                \\
-3) А кое мразиш най-много?                                                                        \\
-4) Опиши семейството си.                                                                          \\
-5) Опиши мястото, където си израстнал.                                                            \\
-6) Опиши поне двама приятели или познати от миналото си, които не са други играови персонажи.     \\
-7) Защо в момента се занимаваш с това?                                                            \\
+В случай, че не ти стигат идеите, пробвай да отговориш на следните въпроси.
+\begin{itemize*}
+\item{Какво искаш от утрешния ден, от идните години, от живота?}
+\item{Какво най-много цениш в хората?}
+\item{А кое мразиш най-много?}
+\item{Опиши семейството си.}
+\item{Опиши мястото, където си израстнал.}
+\item{Опиши поне двама приятели или познати от миналото си, които не са други играови персонажи.}
+\item{Защо в момента се занимаваш с това?}
+\item{Коя религия следваш? Защо?}
+\item{Имаш ли прякор? Как го получи?}
+\end{itemize*}
 
 \subsection{Развитие}
 През определени периоди време се начислява промяна в способностите на персонаж.
