--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -25,7 +25,7 @@
 \usepackage{fullpage}          % Set left and right margin to 1 inch - much less than the default.
 \usepackage{multicol}
 \usepackage{enumitem}          % \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
-\usepackage{mdwlist}           % Compact lists via starred version e.g. enume
+\usepackage{mdwlist}           % Compact lists via starred version e.g. enum*
 
 % Macros, declared in separate headers.
 \include{spell_template}
