Some weapons added for elementaris-modern.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -17,22 +17,22 @@ M24                   &                      &            &            &        
 M2010                 &                      &            &            &                &       &                  \\
 автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг   & среден           \\
 пълнител автомат 30   &                      &            &            &                & 0.25кг& мн. малък        \\
-пистолет              & 4(8)                 & 50м        & средни     &                & 1кг   & евтин
+пистолет              & 4(8)                 & 50м        & средни     &                & 1кг   & евтин            \\
 пълнител пистолет 12  &                      &            &            &                & 0.1кг & мн. евтин        \\
 граната               & 3 - 10               & сила*4     & високи 5м средни 10м ниски 20м &                & 0.2кг\\
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
-                      &                      &            &            &                &                          kk
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
+                      &                      &            &            &                &                          \\
 
 \end{tabular}
 
