Some more modern weapons added.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -9,30 +9,23 @@
 
 \subsection{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност         \\
+Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса заредено & Стойност         \\
 % Карабини
-M25                   &                      &            &            & 10x40 sight    & 5kg   &                  \\ %
-M21                   &                      &            &            &                & 5.27kg&                  \\ % 20 round
-M24                   &                      &            &            &                & 5.8kg &                  \\ % 20 round % caliber 7.62x51 NATO % muzzle velocity 790m
-M2010                 &                      &            &            &                &       &                  \\
-автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг   & среден           \\
-пълнител автомат 30   &                      &            &            &                & 0.25кг& мн. малък        \\
-пистолет              & 4(8)                 & 50м        & средни     &                & 1кг   & евтин            \\
-пълнител пистолет 12  &                      &            &            &                & 0.1кг & мн. евтин        \\
-граната               & 3 - 10               & сила*4     & високи 5м средни 10м ниски 20м &                & 0.2кг\\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
-                      &                      &            &            &                &                          \\
+M25                   &                      &            &            & 10x40 sight    & 5kg           &                  \\  %
+M21                   &                      &            &            &                & 5.27kg        &                  \\  % 20 round
+M24                   &                      &            &            &                & 5.8kg         &                  \\  % 20 round % caliber 7.62x51 NATO % muzzle velocity 790m
+M2010                 &                      &            &            &                &               &                  \\
+M4                    &                      &            &            &                & 3.4kg         &                  \\  % 30 round or STANG, 5.56x45 NATO, 880m/s
+% Гранатомети
+AG36                  &                      &            &            &                & 1.5kg         &                  \\  % muzzle mounted or singular, 1 round, 40x46 granade, 76m/s range 400m, iron sights
+% Автомати
+AK-47                 &                      &            &            &                & 4.78kg        &                  \\  % 30 round, 7.62x39mm, 710m/s, effective range 380m
+%
+автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг           & среден           \\
+пълнител автомат 30   &                      &            &            &                & 0.25кг        & мн. малък        \\
+пистолет              & 4(8)                 & 50м        & средни     &                & 1кг           & евтин            \\
+пълнител пистолет 12  &                      &            &            &                & 0.1кг         & мн. евтин        \\
+граната               & 3 - 10               & сила*4     & високи 5м средни 10м ниски 20м & & 0.2кг    &                  \\
 
 \end{tabular}
 
