Character biography tips expanded.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -54,14 +54,14 @@
 В случай, че не ти стигат идеите, пробвай да отговориш на следните въпроси.
 \begin{itemize*}
 \item{Какво искаш от утрешния ден, от идните години, от живота?}
-\item{Какво най-много цениш в хората?}
-\item{А кое мразиш най-много?}
+\item{Какво най-много цениш в хората? А кое мразиш най-много?}
 \item{Опиши семейството си.}
 \item{Опиши мястото, където си израстнал.}
-\item{Опиши поне двама приятели или познати от миналото си, които не са други играови персонажи.}
+\item{Опиши двама приятели или познати от миналото си.}
 \item{Защо в момента се занимаваш с това?}
 \item{Коя религия следваш? Защо?}
 \item{Имаш ли прякор? Как го получи?}
+\item{Отнемал ли си човешки живот? А животински? Хареса ли ти?}
 \end{itemize*}
 
 \subsection{Развитие}
