Workaround for table of damage clipping.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -162,7 +162,7 @@
 \end{itemize}
 
 \subsection{Таблица щети}
-\begin{multicols}{2}
+%\begin{multicols}{2}  % Some bug apparently prevents multicols from working with tabular.
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | c | c | c}
 Сила & *1/2 & *2/3 & *1  \\
@@ -198,6 +198,7 @@
 30 & 4d+1 & 6d   & 8d+2
 \end{tabular}
 
+\begin{multicols}{2}
 \subsection{Масови сражения}
 Групи от съюзници могат да бъдат събирани в "строй".
 Не е нужно групата да е хомогенна, но трябва да имат обща цел.
