Damage table once more correctly displayed inline of text.

--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -26,6 +26,7 @@
 \usepackage{multicol}
 \usepackage{enumitem}          % \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
 \usepackage{mdwlist}           % Compact lists via starred version e.g. enum*
+\usepackage{wrapfig}           % Make floats, such as figures and tables, inline e.g. \begin{wraptable}{l}{5.5cm}.
 
 % Macros, declared in separate headers.
 \include{spell_template}
