--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -162,7 +162,7 @@
 \end{itemize}
 
 \subsection{Таблица щети}
-%\begin{multicols}{2}  % Some bug apparently prevents multicols from working with tabular.
+\begin{wraptable}[24]{l}{5.5cm}
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{l | c | c | c}
 Сила & *1/2 & *2/3 & *1  \\
@@ -197,8 +197,8 @@
 29 & 4d+1 & 6d-1 & 8d+1  \\
 30 & 4d+1 & 6d   & 8d+2
 \end{tabular}
+\end{wraptable}
 
-\begin{multicols}{2}
 \subsection{Масови сражения}
 Групи от съюзници могат да бъдат събирани в "строй".
 Не е нужно групата да е хомогенна, но трябва да имат обща цел.
@@ -221,7 +221,6 @@
 \item{Стрелба - Сила + най-високото боравене с налично далечно оръжие}
 \item{Броня - Сила + (1/10)сума(пазене * здравина), без щитове}
 \end{itemize}
-\end{multicols}
 \subsubsection{Правила}
 Ръкопашен бой + д6* с/у броня. Ако нападащият строй спечели, лицето на строят му се нанася 1/2 като убити и 1/2 като ранени върху противника. Разликата в хвърлянето се нанася върху моралът на противника / противника губи 1 точка морал (\textit{кое е по-добро?}).
 
