Rappier weapon added.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -88,11 +88,12 @@ Some other figures: There will be one noble household per 200 population, one la
 
 \subsection{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
-Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност         \\
+Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност     \\
 % Едноръчни оръжия.
 Нож                   & 3-9                  & близък     & ниски      & -              & 0.2кг & много евтин  \\
 Къс меч               & 4-10                 & близък     & средни     & повратливост   & 1кг   & евтин        \\
 Меч 80см              & 5-12                 & среден     & средни     & повратливост   & 1кг   & евтин        \\
+Рапира                & 5-12                 & далечен    & средни     &                & 1кг   & среден       \\
 
 % Двуръчни оръжия.
 Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
