Battle axes added to fantasy setting.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -81,7 +81,7 @@ Some other figures: There will be one noble household per 200 population, one la
 мн. евтин & евтин                                   & среден                   & скъп                           & мн. скъп  \\
 щит       & меч                                     & двуръчен меч             & имение                         & замък     \\
 брадва    & халчеста къса ризница                   & боен кон                 & пълна броня пазаене 15 здр. 15 &           \\
-йуче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
+куче      & кован нагръдник                         & качествена кираса и пола & качествена пълна броня         &           \\
 колиба    & къща в малък град или село              & къща в голям град        & централна къща в столицата                 \\
           & магаре С30                              & боен кон                 &
 \end{tabular}
@@ -91,12 +91,14 @@ Some other figures: There will be one noble household per 200 population, one la
 Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса  & Стойност     \\
 % Едноръчни оръжия.
 Нож                   & 3-9                  & близък     & ниски      & -              & 0.2кг & много евтин  \\
+Бойна брадва          & 5-12                 & среден     & средни     & бронебойност   & 1кг   & много евтин  \\
 Къс меч               & 4-10                 & близък     & средни     & повратливост   & 1кг   & евтин        \\
 Меч 80см              & 5-12                 & среден     & средни     & повратливост   & 1кг   & евтин        \\
 Рапира                & 5-12                 & далечен    & средни     &                & 1кг   & среден       \\
 
 % Двуръчни оръжия.
 Пика (две ръце)       & 4-11                 & отдалечен  & средни     & -              & 3кг   & евтин        \\
+Дълга бойна брадва    & 5-12                 & далечен    & високи     & бронебойност   & 2кг   & евтин        \\
 Дълъг меч (две ръце)  & 5-12                 & дълъг      & високи     & повратливост   & 2кг   & среден       \\
 
 % Отдалечени атаки.
