Even more compact enumerations for armor.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -97,7 +97,7 @@
 Защитната стойност на броните се получава от това каква част от тялото е общо покрита.
 \\
 \textbf{Пазене}:
-\begin{itemize*}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
 \item{Шлем за темето(селяшки, евентуално с периферия) 1}
 \item{Шлем с открито лице(с набузници или кръст за носа и очите, каска) 2}
 \item{Шлем със забрало(пълен шлем) 3}
@@ -112,12 +112,12 @@
 \item{Сабатони (бронирани ботуши) +1}
 \item{Грейвси (броня от коленото надолу по пищяла) +1}
 \item{Набедреници(може да е пола, част от дълга ризница или отделен компонент) +1}
-\end{itemize*}
+\end{itemize}
 
 Общо максимум: 15
 \\
 \textbf{Здравина}:
-\begin{itemize*}
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
 \item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
 \item{Халчеста броня, подплатена с гамбезон 4}
 \item{Ламенарна броня, подплатена с гамбезон 6}
@@ -126,7 +126,7 @@
 \\
 \\
 Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
-\end{itemize*}
+\end{itemize}
 
 \subsection{Механика}
 Нека си дойдем на думата.
