--- a/latex/preamble.tex
+++ b/latex/preamble.tex
@@ -27,6 +27,7 @@
 \usepackage{enumitem}          % \begin{enumerate}[topsep=0pt,itemsep=-1ex,partopsep=1ex,parsep=1ex]
 \usepackage{mdwlist}           % Compact lists via starred version e.g. enum*
 \usepackage{wrapfig}           % Make floats, such as figures and tables, inline e.g. \begin{wraptable}{l}{5.5cm}.
+\usepackage{enumitem}          % Customize enumerate, itemize, list.
 
 % Macros, declared in separate headers.
 \include{spell_template}
