Armor separated from general rules: we wont be wearing plate armor in a firefight.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -113,3 +113,15 @@ Some other figures: There will be one noble household per 200 population, one la
 Дървен щит 80см       & 5-12                 & близък     & ниски      & поваляне       & 2кг   & много евтин  \\
 \end{tabular}
 
+\subsection{Брони}
+\textbf{Здравина}:
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Кожена броня(слоеве памук/хартия/коприна/мека кожа, със зашити плочи варена кожа/хитинова коруба на негъвкавите части) 2}
+\item{Халчеста броня, подплатена с гамбезон 4}
+\item{Ламенарна броня, подплатена с гамбезон 6}
+\item{Лята броня, подплатена с гамбезон(средновековен дизайн - субоптимална форма, субоптимална стомана, примитивно закаляване, подвижност в ставите се осигурява от халчести участъци) 8}
+\item{Лята броня, подплатена с гамбезон(ренесансов дизайн - скосени повърхности, качествена стомана (high toughness core),  интелигентно закаляване на повърхностния слой(hardened shell), сложни механични стави) 10}
+\\
+\\
+Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
+\end{itemize}
