Common pattern applied to modern armor.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -30,6 +30,8 @@ AK-47                 &                      &            &            &        
 \end{tabular}
 
 \subsection{Брони}
-Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина.
-Керамична прола - здравина 20, живот 3 удара, маса половин от пазене * здравина.
-
+\textbf{Здравина}:
+\begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
+\item{Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина.}
+\item{Керамична прола - здравина 20, живот 3 удара, маса половин от пазене * здравина.}
+\end{itemize}
