Cover rules for ranged fire.

--- a/latex/rules/combat.tex
+++ b/latex/rules/combat.tex
@@ -62,6 +62,8 @@
 Автоматичните оръжия са способни да произведат повече от един изстрел за ход.
 Хвърлянето за атака е едно.
 Всеки изстрел след първия има <откат> точки по-малко атака, натрупвайки се.
+\subsubsection{Прикритие}
+Прикриване зад дърво: 10
 
 \subsection{Оръжия}
 \begin{itemize}
