Some modern weapons added after research in Wikipedia.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -10,6 +10,12 @@
 \subsection{Оръжия}
 \begin{tabular}{p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm} | p{2cm}}
 Наименование          & Необходима Сила      & Обсег      & Щети       & Свойства       & Маса заредено & Стойност         \\
+% Пистолети
+Beretta M9            &                      & сила * 2   &            &                & 1.2kg         & евтин            \\  % 1.162g loaded, 381m/s, effective fireing range 50m, calliber 9x19 Parabellium, 15 round
+SI P226,              & 4(8)                 & сила * 2   & средни     &                & 1kg           & евтин            \\  % 964g unloaded, 9x19, 15 round.
+Taurus 990 Tracker    & 6(12)                & сила * 2   & средни     &                & 1.2kg         & евтин            \\  % 9 round, .22 caliber , reload 2 turns, revolver
+% Картечни пистолети
+Арсенал-шипка         &                      & сила       & средни     &                & 2.1кг         & евтин            \\  % 2.1kg without magazine, 9x18(32round) or 9x19(25round), 438m/s, recoil 2 (5 for AK-47)
 % Карабини
 M25                   &                      &            &            & 10x40 sight    & 5kg           &                  \\  %
 M21                   &                      &            &            &                & 5.27kg        &                  \\  % 20 round
@@ -23,7 +29,7 @@ AK-47                 &                      &            &            &        
 %
 автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг           & среден           \\
 пълнител автомат 30   &                      &            &            &                & 0.25кг        & мн. малък        \\
-пистолет              & 4(8)                 & 50м        & средни     &                & 1кг           & евтин            \\
+пистолет              & 4(8)                 & 50м        & средни     &                & 1кг           & евтин            \\  % Презареждане 1 ход.
 пълнител пистолет 12  &                      &            &            &                & 0.1кг         & мн. евтин        \\
 граната               & 3 - 10               & сила*4     & високи 5м средни 10м ниски 20м & & 0.2кг    &                  \\
 
@@ -32,6 +38,7 @@ AK-47                 &                      &            &            &        
 \subsection{Брони}
 \textbf{Здравина}:
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
-\item{Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина.}
-\item{Керамична прола - здравина 20, живот 3 удара, маса половин от пазене * здравина.}
+\item{Кевларен шлем - здравина 8 с/у високоскоростни проектили, покритие 2, евтин предмет, 600гр, релси за скрепяне на уреди.}
+\item{Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина, среден предмет.}
+\item{Керамична плоча - здравина 20, живот 3 удара (или всеки удар намаля здравината с 1), маса половин от пазене * здравина, евтин предмет.}
 \end{itemize}
