New designation for armor: (cover x durability).

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -38,7 +38,7 @@ AK-47                 &                      &            &            &        
 \subsection{Брони}
 \textbf{Здравина}:
 \begin{itemize}[topsep=-0cm, partopsep=0cm, parsep=0cm, itemsep=0cm]
-\item{Кевларен шлем - здравина 8 с/у високоскоростни проектили, покритие 2, евтин предмет, 600гр, релси за скрепяне на уреди.}
-\item{Кевларена бонежилетка - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина, среден предмет.}
-\item{Керамична плоча - здравина 20, живот 3 удара (или всеки удар намаля здравината с 1), маса половин от пазене * здравина, евтин предмет.}
+\item{Кевларен шлем(2x8) - здравина 8 с/у високоскоростни проектили, покритие 2, евтин предмет, 600гр, релси за скрепяне на уреди.}
+\item{Кевларена бонежилетка(5x8) - здравина 8 с/у огнестрелни оръжия, маса половин от пазене * здравина, среден предмет.}
+\item{Керамична плоча(2x20) - здравина 20, живот 3 удара (или всеки удар намаля здравината с 1), маса половин от пазене * здравина, евтин предмет.}
 \end{itemize}
