Added modern weapons.

--- a/latex/modern/items.tex
+++ b/latex/modern/items.tex
@@ -23,9 +23,18 @@ M24                   &                      &            &            &        
 M2010                 &                      &            &            &                &               &                  \\
 M4                    &                      &            &            &                & 3.4kg         &                  \\  % 30 round or STANG, 5.56x45 NATO, 880m/s
 % Гранатомети
+OICW                  &                      &            &            &                & 8.2           &                  \\  % 890mm, KE module: 5.56x45mm NATO, 30 rounds(or any STANG compliant 20-150), HE module: 20x85mm
 AG36                  &                      &            &            &                & 1.5kg         &                  \\  % muzzle mounted or singular, 1 round, 40x46 granade, 76m/s range 400m, iron sights
 % Автомати
-AK-47                 &                      &            &            &                & 4.78kg        &                  \\  % 30 round, 7.62x39mm, 710m/s, effective range 380m
+AK-47                 &                      &            &            &                & 4.78kg        &                  \\  % 30 round, 7.62x39mm, 710m/s, effective range 380m, clip is 0.25kg
+M16A1                 &                      &            &            &                &               &                  \\  % 3.6kg, 30 round, 5.56x45mm, 990m/s muzzle velocity, effective range 460m
+% Проектили
+% multiple projectile(buckshot), cone of fire 30m wide, 30m high, muzzle velocity 269m/s
+% practice
+% 5831 - parachuted flare - 40 sec burn
+% star flare - 7 sec burn
+% M433 - high explosive dual purpose - 5cm steel at 150m, casualties 130m, kill radius 5m
+% tar gas
 %
 автомат               & 5(12)                & 400м       & високи     & авт. стрелба   & 5кг           & среден           \\
 пълнител автомат 30   &                      &            &            &                & 0.25кг        & мн. малък        \\
