Added a negative perk.

--- a/latex/rules/perks.tex
+++ b/latex/rules/perks.tex
@@ -32,5 +32,6 @@
 \item{Враг - индивид или организация, готови да отделят ресутрси само за да навредят на персонажа}
 \item{Беден - започваш само с дрехи}
 \item{Кръвожадност}
+\item{Късогледство/Далекогледство - -10 наблюдателност и боравене на далеч/близо}
 \end{itemize*}
 
