Attempted to add a new picture, but because of problems left it commented out.

--- a/latex/modern/skills.tex
+++ b/latex/modern/skills.tex
@@ -1,5 +1,8 @@
-
 \section{Умения}
+%\begin{multicols}{3}             %  I am attempting to insert a second column of text next to the image,
+%\begin{wraptable}[24]{l}{5.5cm}  %  but none of the wo approaches seems to work!
+%\includegraphics[width=0.3\textwidth]{../images/PSYOP.JPG}~  % TODO: include the picture when the above problem has been solved.
+%\end{wraptable}
 Означените със звездичка умения са събирателни понятия.
 Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
 \subsection{Общуване}
@@ -38,3 +41,4 @@
 - да се счупи                \\
 - да удари някого другиго    \\
 - ми нищо не се случва       \\
+%\end{multicols}
