Character sheet rules added to makefile. Dummy character sheet expanded.

--- a/latex/rules/character_sheet.tex
+++ b/latex/rules/character_sheet.tex
@@ -3,7 +3,18 @@
 
 \documentclass{article}
 
+\usepackage[T2A]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[bulgarian]{babel}
+\usepackage{iwona}
+
+
 \begin{document}
+
+\begin{tabular}{|c|}
+Име
+\end{tabular}
+
 
 %  This is an illustration how to glue two tables together.
 \begin{figure}
