Poisons and arrow heads added to the fantasy items list.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -125,3 +125,9 @@ Some other figures: There will be one noble household per 200 population, one la
 \\
 Масата на конпонент клони към една десета от произведенито на покритието и здравината му за средно качество изработка.
 \end{itemize}
+
+\subsection{Други}
+комплект отрови - действие за някокко дена \\
+алхимични принадлежности - кутия, хаван, стъкленици, лампа и т.н., 2кг, сренед  \\
+стрела, клиновидна  \\
+стрела, широка  \\
