Dragonborn race added.

--- a/latex/fantasy/races.tex
+++ b/latex/fantasy/races.tex
@@ -103,4 +103,19 @@
 Катерене()
 }
 
+\race{Драконит}{4}
+{Човек с драконова кръв във вените си.}
+{5-13}{1-10}{2-13}{1-10}
+{
+Неуязвимост от огън
+Нестареещ
+}
+{
+Език-драконски
+Магия-огън
+Магия-пазене
+Двуръчен меч
+Древни легенди
+}
+
 \end{multicols}
