Should we have tex macros for the names of the prime atributes, to avoid inconsistency?

--- a/latex/fantasy/skills.tex
+++ b/latex/fantasy/skills.tex
@@ -3,12 +3,12 @@
 Означените със звездичка умения са събирателни понятия.
 Например може да се избере \textit{елфически} език или оръжие \textit{брадва} или наука \textit{алхимия}.
 \subsection{Общуване}
-Лъжене (Чар)                      \\
-Сплашване (Чар)                   \\
-Изтезаване/Разпитване (Чар)       \\
-Емпатия (Чар)                     \\
-Четене по устните (Чар)           \\
-Молене (Чар)                      \\
+Лъжене (Харизма)                  \\
+Сплашване (Харизма)               \\
+Изтезаване/Разпитване (Харизма)   \\
+Емпатия (Харизма)                 \\
+Четене по устните (Харизма)       \\
+Молене (Харизма)                  \\
 
 \subsection{Академични}
 Език* (Ум)                        \\
