Added a table of Hero points per adveture epicness.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -8,6 +8,21 @@
 Героите на нашето приключение трябва да бъдат описани по прост, но съдържателен начин.
 Това става с \textbf{дарби, показатели и умения}.
 
+\subsection{Точки за герой}
+Броят точки на играч се определя от разказвача според мащаба на приключението.
+С точки за герой се закупуват както основните показатели - сила, ловкост, ум и харизма - така и положителни и отрицателни качества.
+Някои раси също струват точки за герой за да бъдат избрани.
+Уменията, които владее героят, се определят от нивото на показателят му Ум.
+
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{p{3cm} | p{2cm} | p{6cm} | p{3cm}}
+Ролева игра          & Точки за герой      & Тактическа игра                   & Точки       \\
+гражданин на света   & 20                  & отряд(8-13)                       & 250         \\
+герой / гений        & 30                  & бригада(3000-5000)                & 10 000      \\
+митично същество     & 50                  & армия(80 000 - 200 000)           & 400 000     \\
+стихия               & 100                 & група армии (400 000 - 1 000 000) & 20 000 000  \\
+\end{tabular}
+
 \subsection{Дарби}
 Това са свойства на перонажа, с които той започва, и не се очаква да могат да бъдат променени някога.
 Примери вкючват “Интуитивна ориентация в тъмното”, “Огнена кръв(раните не кървят, а веднага се затварят)”, “Слепота”.
