Removed content from character creation rules, that seems never helped anyone.

--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -1,19 +1,14 @@
 % This file concers character charuin and eviutuion. It;s aim is to be consice anad genre-independent.
 
 \section{Игрови персонаж}
-\emph{Ел'тлменел от селото Нлимна има резки чети за елф, и определено неестествен ръст на неговите метър и деведесет.
-Олекотената ризница от еленски рога не приквива силните му ръце и крака, а копието и лъка допълват картината на ловец/войн, само тъмнозеленото ленено наметало остава.
-Менел, както го наричат не-елфите навсякъде, е израстнал в гори, не умее да чете и е страшно глупав, когато става дума за светски дела.}
-
-Героите на нашето приключение трябва да бъдат описани по прост, но съдържателен начин.
-Това става с \textbf{дарби, показатели и умения}.
 
 \subsection{Точки за герой}
 Броят точки на играч се определя от разказвача според мащаба на приключението.
 С точки за герой се закупуват както основните показатели - сила, ловкост, ум и харизма - така и положителни и отрицателни качества.
 Някои раси също струват точки за герой за да бъдат избрани.
 Уменията, които владее героят, се определят от нивото на показателят му Ум.
-
+\\
+\\
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{2cm} | p{6cm} | p{3cm}}
 Ролева игра          & Точки за герой      & Тактическа игра                   & Точки       \\
@@ -23,32 +18,28 @@
 стихия               & 100                 & група армии (400 000 - 1 000 000) & 20 000 000  \\
 \end{tabular}
 
-\subsection{Дарби}
-Това са свойства на перонажа, с които той започва, и не се очаква да могат да бъдат променени някога.
-Примери вкючват “Интуитивна ориентация в тъмното”, “Огнена кръв(раните не кървят, а веднага се затварят)”, “Слепота”.
-Персонажът Нафарфорий/Пешо се създава с {\bfедно положително} == помагащо му качество.
-Или до {\bfоще три}, като за всяко допълнително “хубаво” качество, си харесваме по едно “лошо”. Стига се цупи де, лошите качества са крайно забавни за разиграване!
+\subsection{Качества}
+Това са както естествени, така и свръхестествени дарби или проклятия.
+Полезните дарби струват по една точка за герой, а вредящите по -1, с разумното ограничение за не повече от три.
+Твърде "силни" дарби, като наприемр телепортиране, се препоръчв да се разделят на няколко базови части, всяка от която струва по 1 точка за герой.
+Едно възможно разделение от примера е телепортиране - усещане на дестинацията, телепортиране - активиране с мисъл, телепортиране - пренасяне.
 
 \subsection{Показатели}
-Разполагаш с \textbf{33 точки}, които да разпределиш по показателите. Те се променят рядко.
-\begin{itemize}
+Рамките на показателите се определят от расата, нормално 1-10 за човеците.
+С други думи, не е позволено да се сложи по малко от 1 точка на кой да е показател, нито повече от 10.
+
+\begin{itemize*}
 \item {\bfСила} – телосложение, експлозивна сила, статична сила, умение да се концентрира силата на тялото, имунна система
 \item {\bfЛовкост} – както пъргавина и гъвкавост на цялото тяло, скорост, така и прецизност във фините задачи
 \item {\bfУм} – еродиция, памет, разсъдък, концентрация, наблюдателност, схватливост
 \item {\bfХаризма} – увереност, емпатия, изразителност, излъчване
-\end{itemize}
+\end{itemize*}
 
 \subsection{Умения}
-Начални точки и развиване  \\
 С \textit{(Ум * 5)} точки разполагаш, за да разпределиш по умения.
-Уменията, също така, се повишават с точки опит по време на игра.
-\\
-\\
-Ниво на владеене  \\
-Нивото на владеене на всяко умение се оценява по скала от 0 до 15, като 15 е специална стойност.
 Всяко умение е базирано върху някой показател.
 Половината от показателя (закръглено надолу) се добавя към ранговете на умението, когато то се ползва.
-Повишаване на умение на повече рангове,  отколкото е показателят, струва по две точки за всеки ранг на умението.
+Повишаване на умение на повече рангове,  отколкото е показателят, струва по три точки за всеки ранг на умението.
 
 \subsection{Носене}
 \rowcolors{1}{white}{lightgray}
@@ -78,11 +69,3 @@
 \item{Имаш ли прякор? Как го получи?}
 \item{Отнемал ли си човешки живот? А животински? Хареса ли ти?}
 \end{itemize*}
-
-\subsection{Развитие}
-През определени периоди време се начислява промяна в способностите на персонаж.
-Губи се една точка на някое умение, което не е ползвано последната сесия.
-Получаса се една точка на някое умение (може да е същото каот изгубеното), което героят е ползвал от последното начисляване.
-Получава още една точка най-много допринеслият през последната сесия.
-Получава още една точка най-много допринеслият от последното начисляване.
-
