--- a/latex/rules/character.tex
+++ b/latex/rules/character.tex
@@ -12,9 +12,9 @@
 \rowcolors{1}{white}{lightgray}
 \begin{tabular}{p{3cm} | p{2cm} | p{6cm} | p{3cm}}
 Ролева игра          & Точки за герой      & Тактическа игра                   & Точки       \\
-гражданин на света   & 20                  & отряд(8-13)                       & 250         \\
-герой / гений        & 30                  & бригада(3000-5000)                & 10 000      \\
-митично същество     & 50                  & армия(80 000 - 200 000)           & 400 000     \\
+гражданин на света   & 20                  & отряд(8-13)                       & 260         \\
+герой / гений        & 30                  & бригада(3000-5000)                & 100 000     \\
+митично същество     & 50                  & армия(80 000 - 200 000)           & 4 000 000   \\
 стихия               & 100                 & група армии (400 000 - 1 000 000) & 20 000 000  \\
 \end{tabular}
 
