Some work on reforming the rough SV of businesses.

--- a/latex/fantasy/items.tex
+++ b/latex/fantasy/items.tex
@@ -18,19 +18,23 @@
 рицар
 гробар
 
-Business / Population required per instance of business (called Support Value or SV)
-Shoemakers     150
-Furriers      250
-Maidservants     250
-Tailors                   250
-Barbers                   350
-Jewelers     400
-Taverns/Restaurants  400
-Old-Clothes     400
-Pastrycooks     500
-Masons                   500
-Carpenters     550
-Weavers     600
+% Business / Population required per instance of business (called Support Value or SV)
+\rowcolors{1}{white}{lightgray}
+\begin{tabular}{p{3cm} | p{2cm}}
+обущар      & 150   \\
+кожар       & 250   \\
+слугиня     & 250   \\
+шивач       & 250   \\
+бръснар     & 350   \\
+бижутер     & 400   \\
+таверна     & 400   \\
+хлебар      & 500   \\
+зидар       & 500   \\
+дърводелец  & 550   \\
+тъкач       & 600   \\
+
+\end{tabular}
+
 Chandlers     700
 Mercers     700
 Coopers     700
